--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nav>
   <div class="nav-wrapper green darken-3">
-    <a href="#!" class="left flow-text" style="margin-left: 20px;">AirThin Currency Convert &nbsp;</a>
+    <a href="https://amishraj.github.io/airthincc/" class="left flow-text" style="margin-left: 20px;">AirThin Currency Convert &nbsp;</a>
     <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="material-icons">menu</i></a>
     <ul class="right hide-on-med-and-down amber-text text-lighten-5    ">
       <!-- <li><a href="collapsible.html">Home</a></li> -->
@@ -24,10 +24,10 @@
        in order to fetch correct Currency Rates.
       The rates are updated every day to ensure consistency. <br><br>
 
-      This project was built using <b>Angular 9</b>  and <b> Materialize-CSS </b>    </p>
+      This project was built using <b>Angular 9</b>  and <b> Materialize-CSS </b> </p>
   </div>
   <div class="modal-footer">
-    <a href="#!" class="modal-close waves-effect waves-green btn-flat">Close</a>
+    <a href="https://github.com/amishraj/airthincc.git" target="_blank" class="modal-close waves-effect waves-green btn-flat">Github</a>
   </div>
 </div>
         
@@ -244,8 +244,8 @@
       <div class="col l4 offset-l2 s12">
         <h5 class="white-text">Other Projects</h5>
         <ul>
-          <li><a class="grey-text text-lighten-3" href="#!">AirThin Notes</a></li>
-          <li><a class="grey-text text-lighten-3" href="#!">Web Portfolio</a></li>
+          <li><a class="grey-text text-lighten-3" href="https://amishraj.github.io/airthinnotes/" target="_blank">AirThin Notes</a></li>
+          <li><a class="grey-text text-lighten-3" href="https://amishraj.github.io/" target="_blank">Web Portfolio</a></li>
           <!-- <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
           <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li> -->
         </ul>
@@ -255,7 +255,7 @@
   <div class="footer-copyright">
     <div class="container">
     Created in 2020 by Amish Raj
-    <a class="grey-text text-lighten-4 right" href="#!">AirThin Currency Convert</a>
+    <a class="grey-text text-lighten-4 right" href="https://amishraj.github.io/airthincc/">AirThin Currency Convert</a>
     </div>
   </div>
 </footer>
